Black pixels (not black boxes) on a denoising render #51560

Closed
opened 2017-05-19 15:56:53 +02:00 by bigbad · 7 comments

System Information
OS: Windows 10
GPU: AMD 390X 8gb, latest drivers
CPU+RAM: i7-5820k, 32gb Ram

Blender Version
blender-2.78.0-git.cf1127f-windows64

Short description of error

The black boxes are fixed in this build but I get black pixels on some of the renders with denoise. They are visible under the painting and near the windows.

Exact steps for others to reproduce the error
I've included a blend file. Just pressing F12 will do.

room.png
Grey & White Room 03 BS.blend

System Information OS: Windows 10 GPU: AMD 390X 8gb, latest drivers CPU+RAM: i7-5820k, 32gb Ram Blender Version blender-2.78.0-git.cf1127f-windows64 **Short description of error** The black boxes are fixed in this build but I get black `pixels` on some of the renders with denoise. They are visible under the painting and near the windows. **Exact steps for others to reproduce the error** I've included a blend file. Just pressing F12 will do. ![room.png](https://archive.blender.org/developer/F603917/room.png) [Grey & White Room 03 BS.blend](https://archive.blender.org/developer/F603919/Grey___White_Room_03_BS.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bigbad

Added subscriber: @bigbad
Lukas Stockner self-assigned this 2017-05-19 17:15:47 +02:00

Added subscriber: @YAFU

Added subscriber: @YAFU

Hi.
I can confirm this on Linux too, GTX 960. Hash: a7c4b6f

I also get similar black pixels with this scene:
Vray_vs_Cycles_vs_Maxwell.blend
And these denoising setting:
Radius: 15
Strength: 0.35
Feature Strength: 0.4
untitled_R15_S0.35_FS0.4.jpg

Hi. I can confirm this on Linux too, GTX 960. Hash: a7c4b6f I also get similar black pixels with this scene: [Vray_vs_Cycles_vs_Maxwell.blend](https://archive.blender.org/developer/F600936/Vray_vs_Cycles_vs_Maxwell.blend) And these denoising setting: Radius: 15 Strength: 0.35 Feature Strength: 0.4 ![untitled_R15_S0.35_FS0.4.jpg](https://archive.blender.org/developer/F604036/untitled_R15_S0.35_FS0.4.jpg)

This issue was referenced by blender/cycles@98f23b346e

This issue was referenced by blender/cycles@98f23b346e85731f627e4e312b61c6a0c09575bd

This issue was referenced by 3dee1f079f

This issue was referenced by 3dee1f079f3ac84a649dda90f920610681ffb52d
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51560
No description provided.